samples/_failures_safe/1761339403_ddb103_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a11ca899.c:146:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 | int matrix
      | ^~~
